<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/splash_bg"
                tools:context=".activity.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="@dimen/_128sdp"
                    android:layout_height="@dimen/_128sdp"
                    android:src="@drawable/syslogo"
                    android:tint="@color/colorPrimary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="90.5dp"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_background_white"
                        android:alpha=".4"/>

                    <LinearLayout
                        android:id="@+id/_userName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_margin="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ico_user_name"
                            android:tint="@color/colorPrimaryDark"/>

                        <EditText
                            android:id="@+id/ed_userName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:padding="5dp"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:hint="@string/email"/>

                    </LinearLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_below="@+id/_userName"/>

                    <LinearLayout
                        android:layout_below="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginRight="10dp"
                            android:layout_margin="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ico_password"
                            android:tint="@color/colorPrimaryDark"/>


                        <EditText
                            android:id="@+id/ed_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword"
                            android:layout_marginLeft="10dp"
                            android:padding="5dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="14sp"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:background="@null"
                            android:imeOptions="actionDone"
                            android:hint="@string/password"/>

                    </LinearLayout>


                </RelativeLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/rounded_background_primary"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true">

                        <CheckBox
                            android:id="@+id/remindme"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimaryDark"
                            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                            android:text="@string/remember_me"/>

                    </LinearLayout>

                    <com.tech.ac.sys.cv.TextviewRegular
                        android:id="@+id/tv_forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/forgot_password"/>

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:padding="5dp"
                android:layout_margin="0dp"
                android:orientation="horizontal">

                <com.tech.ac.sys.cv.TextviewRegular
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/create_an_account"/>

                <com.tech.ac.sys.cv.TextviewRegular
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginLeft="5dp"
                    android:textSize="14sp"
                    android:text="@string/sign_up"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        app:SpinKit_Color="@color/text_view_color"
        android:visibility="gone"/>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/my_snackbar">
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>