<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_registration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="@drawable/splash_bg"
                tools:context=".activity.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="14sp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilePic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:src="@drawable/user_place_holder"/>

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp"
                        android:src="@drawable/ico_camera"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:minHeight="136dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha=".4"
                        android:background="@drawable/rounded_background_white"
                        android:minHeight="136dp"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/iv_userOrBusiness"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:tint="@color/colorPrimaryDark"
                                android:src="@drawable/ico_user_name"/>

                            <EditText
                                android:id="@+id/ed_userName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:hint="@string/fullname"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName"
                                android:padding="5dp"
                                android:textColor="@color/colorPrimaryDark"
                                android:textColorHint="@color/colorPrimaryDark"
                                android:textSize="14sp"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/colorPrimaryDark" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:src="@drawable/ico_email"
                                android:tint="@color/colorPrimaryDark"/>

                            <EditText
                                android:id="@+id/ed_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:hint="@string/email"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:padding="5dp"
                                android:textColor="@color/colorPrimaryDark"
                                android:textColorHint="@color/colorPrimaryDark"
                                android:textSize="14sp"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/colorPrimaryDark" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                android:layout_margin="10dp"
                                android:src="@drawable/ico_password"
                                android:tint="@color/colorPrimaryDark"/>

                            <EditText
                                android:id="@+id/ed_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:hint="@string/password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:padding="5dp"
                                android:textColor="@color/colorPrimaryDark"
                                android:textColorHint="@color/colorPrimaryDark"
                                android:textSize="14sp"/>

                        </LinearLayout>
                    </LinearLayout>

                </RelativeLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rounded_background_primary"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.tech.ac.sys.cv.TextviewRegular
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/already_have_account"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"/>

                <com.tech.ac.sys.cv.TextviewRegular
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        app:SpinKit_Color="@color/colorPrimary"
        android:visibility="gone"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/my_snackbar">

    </android.support.design.widget.CoordinatorLayout>



</RelativeLayout>
